--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=mongodb+srv://santa:<password>@leaderboard.5oxtqm2.mongodb.net/
+DATABASE_URL=mongodb+srv://santa:!QAZ1qaz@leaderboard.5oxtqm2.mongodb.net/
 DATABASE_PASSWORD=!QAZ1qaz
 PORT=3030
